lab1/Test/L1-A-12-5.output
Error Type A at Line 6
Error Type A at Line 8
Error Type B at Line 11
Error Type B at Line 16
Error Type A at Line 23
Error Type B at Line 37
Error Type A at Line 41
