lab1/Test/L1-A-12-5.cmm
int PDCk_7cvC ( struct Fh7alPdinNjhnA {
}SXObNSv8nrGkwdt , int Ws9Ak1DS3v7Q ) {
  struct z4HfIhWXC3ojY723ft riKjbskstgftZS ;
  struct {
    struct hcxg1HkR6oAwqwbwP K ;
    int ohO241N1tcT6B :;
  }zuYMcfjUNnozro ;
  float $QcYsXVLaN1K4HicU1A ;
  int mqBXa13TIvwjt8X = NfaHe3LFd6o , j [ 1897655500 
    ] ;
  if mZlqQ1xzYOwuMhUv ) {
  }else   L2wlA1GdUJg_k = lrkqR && MHbI >= O5aUkZW 
    - ojsHbNeRz * f ( fkDs83r || qB1vusfaApArqww != Ju9HWSm1VpjNtDC2PMgW 
    + j2irUv6 [ hbBT3AZZU8 > iGeR37ZZXNl55LTbVa4B + ! 
    - ( dSWfTULYYmk * fU2lIuLP0MedUl [ Ze14mWG5BAQAugrobB 
    <= dYy / ! qwQK41Pgu [ YCv_DLFgTg || < q7eis_fEI507jkoBdmq8 
    [ c && KMSFei3cEPqRz0 > - - - - - te ( Wwkyribe522 
    , p ) ] ] . qYhYBe2n7vZka0L3 ] . lVkq + 1223441439 
    * - rEYl_EBzi2fWjr3YvgQ ) . VHc3U50X9idXAo8Rjt ] == 
    969053823.1378792809 / ! - wyXxl0Um7NyL9vcHq ( ) ) 
    ;

@}
int TuvmxsVS6S8_TZ_H 
;
int ;
int ;
int fExQEDuDlOby , Fb_YQhml1XyUFnu 

;
int podZ9LP ( ) {
}
int ;
int ;
int ;
int ;
int k ( {
}
int y ( ) {
}
@int ;
int u_Rw ( ) {
  if ( NIpA0Tugabvu0ZcYF2 )   if ( IYuEaTah2bb5 ) 
      mgBZKYUYngt ;
else   if ( a44B0Hvtp )   while ( WrIpEkgHzT6Y0h8om6l 
    )   return aY3O8RMBqECBdROWgjc ;




}
